# find-unused-pub

./: Cargo.toml  README.md
src/: main.rs
src/snapshots/: find_unused_pub__tests__scan_results.snap
