[package]
name = "find-unused-pub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "find-unused-pub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
catppuccin = { version = "2", features = ["ratatui"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
owo-colors = "4"
ratatui = "0.29"
regex = "1"
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
